# scheduledscraper

./: README.md  setup.cfg
.github/workflows/: python-package.yml
scheduledscraper/: __init__.py
tests/: test_dummy_scheduler.py  test_scraper.py  test_sqlite_storage.py
