[metadata]
name = poissonscraper
version = 0.01
description = Poisson scheduling for scraping
long_description = file: README.md
keywords = webscraping
license = MIT License
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3

[options]
packages = poissonscraper
install_requires =
    scrapelib