[metadata]
name = scheduledscraper
version = 0.01
description = Scheduling for scraping
long_description = file: README.md
keywords = webscraping
license = MIT License
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3

[options]
packages = scheduledscraper
install_requires =
    scrapelib

[options.extras_require]
test =
    pytest
    pytest-mock
    mypy
    types-requests
    lxml-stubs